--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "rollup": "^2.70.1",
         "rollup-plugin-cleanup": "^3.2.1",
         "rollup-plugin-commonjs": "^10.1.0",
+        "rollup-plugin-strip": "^1.2.2",
         "rollup-plugin-terser": "^7.0.2"
     },
     "dependencies": {
